Add i18n SSR and MDX support

--- a/content/Blog/2018-11-11/index.en.mdx
+++ b/content/Blog/2018-11-11/index.en.mdx
@@ -4,12 +4,11 @@ cover: "https://unsplash.it/1152/300/?random?BirchintheRoses"
 date: "2018/11/19"
 category: "Development"
 tags:
-    - React.js
-    - JavaScript
-type: 'blog'
+  - React.js
+  - JavaScript
+type: "blog"
 ---
 
 # Ein neuer Eintrag
 
 Und noch mehr text
-
