--- a/content/Blog/2018-11-13/index.mdx
+++ b/content/Blog/2018-11-13/index.mdx
@@ -5,9 +5,9 @@ covercolor: "#0000ff22"
 date: "01/03/2017"
 category: "Design"
 tags:
-    - User Experience
-    - User Research
-type: 'blog'
+  - User Experience
+  - User Research
+type: "blog"
 ---
 
 ## Headline 2 - Ein neuer Eintrag
