--- a/content/Blog/2018-11-14/index.en.mdx
+++ b/content/Blog/2018-11-14/index.en.mdx
@@ -4,9 +4,9 @@ cover: "https://unsplash.it/1152/1000/?random"
 date: "01/03/2017"
 category: "Design"
 tags:
-    - User Experience
-    - User Research
-type: 'blog'
+  - User Experience
+  - User Research
+type: "blog"
 ---
 
 # Ein neuer Eintrag
@@ -26,4 +26,3 @@ That said, do you have a good game to suggest? I'm always looking for interestin
 ### Heading 3
 
 #### Heading 4
-
