--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -1,19 +1,25 @@
 {
-  "work": "Arbeiten",
-  "about": "Über mich",
-  "contact": "Kontakt",
-  "blog": "Blog",
-  "notes": "Notizen",
-  "homepageOverline": "Digitales Produktdesign & Frontend-Entwicklung",
-  "homepageHeadline": "Ich gestalte und entwickle digitale Produkte.",
+  "nav": {
+    "work": "Arbeiten",
+    "about": "Über mich",
+    "contact": "Kontakt",
+    "blog": "Blog",
+    "notes": "Notizen"
+  },
+  "homepage": {
+    "overline": "Digitales Produktdesign & Frontend-Entwicklung",
+    "headline": "Ich gestalte und entwickle digitale Produkte."
+  },
+  "mission": {
+    "overline": "Mission",
+    "headline": "Digitaler Fokus",
+    "paragraph": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque ratione veniam nobis, expedita impedit earum, minima, ex quo amet quis assumenda nam. Nesciunt officiis sit aperiam suscipit odit nihil distinctio."
+  },
   "references": "Referenzen",
   "projects": "Projekte",
   "article": "Artikel",
   "design": "Design",
   "development": "Entwicklung",
-  "missionOverline": "Mission",
-  "missionHeadline": "Digitaler Fokus",
-  "missionParagraph": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque ratione veniam nobis, expedita impedit earum, minima, ex quo amet quis assumenda nam. Nesciunt officiis sit aperiam suscipit odit nihil distinctio.",
   "teachingOverline": "",
   "teachingHeadline": "Ich unterrichte beim Digital Career Institute",
   "teachingParagraph": "Seit dem Dezember 2018 habe ich über 100 Teilnehmer zum Thema Webdevelopment unterrichtet. Ich habe zusammen mit anderen Dozenten am Curriculum gearbeitet und den Schülern das Programmieren beigebracht. \n Von HTML, CSS und JavaScript bis zu React.js, Node.js und MongoDB habe ich die Schüler zum Fullstack JavaScript Developer ausgebildet.",
