--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -15,22 +15,31 @@
     "headline": "Digitaler Fokus",
     "paragraph": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque ratione veniam nobis, expedita impedit earum, minima, ex quo amet quis assumenda nam. Nesciunt officiis sit aperiam suscipit odit nihil distinctio."
   },
+  "teaching": {
+    "overline": "Unterricht",
+    "headline": "Ich unterrichte beim Digital Career Institute",
+    "paragraph": "Seit dem Dezember 2018 habe ich über 100 Teilnehmer zum Thema Webdevelopment unterrichtet. Ich habe zusammen mit anderen Dozenten am Curriculum gearbeitet und den Schülern das Programmieren beigebracht. \n Von HTML, CSS und JavaScript bis zu React.js, Node.js und MongoDB habe ich die Schüler zum Fullstack JavaScript Developer ausgebildet."
+  },
+  "hire": {
+    "overline": "Arbeite mit mir",
+    "headline": "So kann ich helfen",
+    "step1": "Ich plane, konzipiere, gestalte und realisiere ihr digitales Vorhaben.",
+    "step2": "Ich unterstütze ihr Team mit meinen Kompetenzen bei ihrem Projekt.",
+    "step3": "Ich gebe ihrem Team einen Workshop um euch auf das nächste Level zu bringen.",
+    "step4": "Ich spreche bei ihrem Event über aktuelle Themem im Bereich Design und Development."
+  },
+  "footer": {
+    "letsChat": "Lass uns reden",
+    "legal": "Rechtliches",
+    "imprint": "Impressum und AGB",
+    "privacy": "Datenschutz"
+  },
   "references": "Referenzen",
   "projects": "Projekte",
   "article": "Artikel",
   "design": "Design",
   "development": "Entwicklung",
-  "teachingOverline": "",
-  "teachingHeadline": "Ich unterrichte beim Digital Career Institute",
-  "teachingParagraph": "Seit dem Dezember 2018 habe ich über 100 Teilnehmer zum Thema Webdevelopment unterrichtet. Ich habe zusammen mit anderen Dozenten am Curriculum gearbeitet und den Schülern das Programmieren beigebracht. \n Von HTML, CSS und JavaScript bis zu React.js, Node.js und MongoDB habe ich die Schüler zum Fullstack JavaScript Developer ausgebildet.",
-  "hireOverline": "Arbeite mit mir",
-  "hireHeadline": "So kann ich helfen",
-  "hireStep1": "Ich plane, konzipiere, gestalte und realisiere ihr digitales Vorhaben.",
-  "hireStep2": "Ich unterstütze ihr Team mit meinen Kompetenzen bei ihrem Projekt.",
-  "hireStep3": "Ich gebe ihrem Team einen Workshop um euch auf das nächste Level zu bringen.",
-  "hireStep4": "Ich spreche bei ihrem Event über aktuelle Themem im Bereich Design und Development.",
-  "letsChat": "Lass uns reden",
-  "legal": "Rechtliches",
-  "imprint": "Impressum und AGB",
-  "privacy": "Datenschutz"
+  "button": {
+    "read": "Mehr erfahren"
+  }
 }
