--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -2,6 +2,7 @@
   "nav": {
     "work": "Arbeiten",
     "about": "Über mich",
+    "service": "Dienstleistung",
     "contact": "Kontakt",
     "blog": "Blog",
     "notes": "Notizen"
