--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -2,6 +2,7 @@
   "nav": {
     "work": "Work",
     "about": "About",
+    "service": "Service",
     "contact": "Contact",
     "blog": "Blog",
     "notes": "Notes"
