Clean up and add custom slider

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -14,7 +14,8 @@
   "mission": {
     "overline": "Mission",
     "headline": "Digitaler Fokus",
-    "paragraph": "Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque ratione veniam nobis, expedita impedit earum, minima, ex quo amet quis assumenda nam. Nesciunt officiis sit aperiam suscipit odit nihil distinctio."
+    "paragraph1": "Als selbstständiger Digital Product Designer und Frontend Developer konzipiere, gestalte und entwickle ich digitale Produkte für Unternehmen und Unternehmensgründer. Mein Ziel ist es, technische und komplexe Prozesse benutzerfreundlich zu gestalten.",
+    "paragraph2": "Für plattformübergreifende Lösungen arbeite ich mit bewährten Verfahren und modernster Technologie. Um die Funktionalität und das Design zu überbrücken, erstelle ich umfassend gestaltete Benutzeroberflächen für Ihre Website oder App."
   },
   "teaching": {
     "overline": "Unterricht",
