Switch to @glidejs/glide

--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -42,7 +42,8 @@
   "design": "Design",
   "development": "Entwicklung",
   "button": {
-    "read": "Mehr erfahren"
+    "read": "Mehr erfahren",
+    "visit": "Webseite besuchen"
   },
   "about": {
     "headline": "Digital by default",
