--- a/src/locales/de/translation.json
+++ b/src/locales/de/translation.json
@@ -73,6 +73,7 @@
     "headline": "Ausgewählte Arbeiten"
   },
   "service": {
+    "headline": "Digitaler Fokus mit dem User im Zentrum",
     "section": {
       "1": {
         "headline": "Dienstleistung",
