--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -72,6 +72,7 @@
     "headline": "Selected works"
   },
   "service": {
+    "headline": "Digital focus with the user at the center",
     "section": {
       "1": {
         "headline": "Services",
