Adjustments before rebase

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -48,6 +48,7 @@
   "article": "Article",
   "design": "Design",
   "development": "Development",
+  "skills": "Skills",
   "button": {
     "read": "Read more",
     "visit": "Visit website"
